Style the addresses info & fix bugs on mobile (ios)

--- a/demo/peacock/src/pages/checkout/checkout-form.css
+++ b/demo/peacock/src/pages/checkout/checkout-form.css
@@ -23,7 +23,7 @@
   margin-top: 50px;
   overflow-y: scroll;
   height: calc(100% - 100px);
-  padding-bottom: 15px;
+  padding-bottom: 20px;
 }
 
 .button-wrap {
