--- a/demo/peacock/src/pages/checkout/shipping/address-list.css
+++ b/demo/peacock/src/pages/checkout/shipping/address-list.css
@@ -23,7 +23,6 @@
 .item-content {
   flex-grow: 1;
   line-height: 1.6;
-  font-weight: 300;
 }
 
 .action-link-add {
