--- a/demo/peacock/src/ui/radiobutton/radiobutton.css
+++ b/demo/peacock/src/ui/radiobutton/radiobutton.css
@@ -1,7 +1,7 @@
 @import "colors.css";
 
 .radiobutton {
-  --size: 16px;
+  --size: 20px;
 
   & .input {
     width: var(--size);
@@ -13,14 +13,14 @@
     &:hover {
       & + .label:before {
         background: var(--radio-button-outer-circle);
-        box-shadow: inset 0 0 0 4px var(--radio-button-inner-circle);
+        box-shadow: inset 0 0 0 5px var(--radio-button-inner-circle);
       }
     }
 
     &:checked, &:active, &:focus {
       & + .label:before {
         background: var(--radio-button-inner-circle);
-        box-shadow: inset 0 0 0 4px var(--radio-button-outer-circle);
+        box-shadow: inset 0 0 0 5px var(--radio-button-outer-circle);
       }
     }
 
@@ -34,18 +34,17 @@
 
   & .label {
     display: flex;
-    margin-top: -14px;
-    line-height: 14px;
+    margin-top: -20px;
     position: relative;
 
     &:before {
       content: "";
       display: inline-block;
-      width: var(--size);
-      height: var(--size);
+      min-width: var(--size);
+      max-height: var(--size);
       background: var(--radio-button-unchecked);
       margin-right: 8px;
-      margin-top: 5px;
+      margin-top: 2px;
       vertical-align: middle;
       border-radius: 100%;
       border: 1px solid var(--radio-button-border);
